@@ -196,7 +196,7 @@ bgcolor="#ffffff">
       <LI>FT_ReplicationManager/tao_ft_replicationmanager</LI>
       <LI>FT_Service</LI>
       <LI>Fault_Detector/tao_fault_detector</LI>
-      <LI>Fault_Notifier</LI>
+      <LI>Fault_Notifier/tao_fault_notifier</LI>
       <LI>Naming_Service/tao_cosnaming</LI>
       <LI>Scheduling_Service/tao_cosscheduling</LI>
       <LI>Trading_Service/tao_costrading</LI>
