@@ -1,6 +1,6 @@
 // $Id$
 project : taoserver, orbsvcsexe, install, fault_tolerance, notification_serv {
-  exename  = Fault_Notifier
+  exename  = tao_fault_notifier
   Source_Files {
     FT_Notifier_i.cpp
     Fault_Notifier_Main.cpp
