@@ -34,6 +34,7 @@ USER VISIBLE CHANGES BETWEEN TAO-1.8.2 and TAO-1.8.3
   * 'Time_Service_Clerk'      to 'tao_costime_clerk'
   * 'ImplRepo_Service'        to 'tao_imr_locator'
   * 'ImR_Activator'           to 'tao_imr_activator'
+  * 'Fault_Notifier'          to 'tao_fault_notifier'
 
 USER VISIBLE CHANGES BETWEEN TAO-1.8.1 and TAO-1.8.2
 ====================================================
